Iniciando final de implemetação de pages

--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -77,6 +77,8 @@ target 'hackinghelp' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'hackinghelpTests' do
     inherit! :complete
     # Pods for testing
