--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,9 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/stack": "^5.4.0",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.1.4",
+    "@react-navigation/stack": "^5.2.13",
+    "axios": "^0.18.0",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "^2.0.0",
+    "react-native-screens": "^2.8.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
